ipmi_vis.css
#div_title, #div_group_by, #div_canvas, #div_navi_and_replay, #ipmi_replay {
  text-align: center
}

#my_canvas, #capture_info {
  border: 1px grey dashed
}

#ipmi_replay_output {
  margin: auto
}

#title_capture, #title_open_file, #title_mode_select, #title_capture_info {
	margin: auto;
	text-align: center
}

#ipmi_replay {
	display: none
}

#div_canvas {
	margin-top: 2px
}

#my_canvas_dbus, #span_group_by_dbus {
	border: 1px #008000 solid
}

#my_canvas_ipmi, #span_group_by_ipmi {
	border: 1px #00c0c0 solid
}

#my_canvas_boost_asio_handler, #span_group_by_boost_asio_handler {
	border: 1px #c03030 solid
}

#blocker {
	position: absolute;
	top: 0; bottom: 0; display: block;
	width: 100%; height: 100%;
	background-color: rgba(128, 128, 128, 0.6);
	display: none;
}

#blocker_caption {
	position: absolute;
	top: 44%;
	width: 100%;
	color: #00F;
	background-color: #CCF;
}

